--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-   <meta charsst='UTF-8'>
-   <meta name="'viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   
+   <meta charset='UTF-8'>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>receitas de chocolate</title>
+</head>
+<body>
+   <section class="chamada">
+      <div class="chamada-texto"
+      <header>receitas de chocolate</header>
+      <h4> Mousse Clássica de Chocolate - Receitas Nestlé</h4>
+      </div>
+      <div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/rG1osb8STH0?si=Th-KiJEsVWsb30YC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+
+
+   </section>
+
+</body>
+</html>
